# libvmod-statsd

./: .gitignore  README.rst  configure.ac
src/: Makefile.am  vmod_statsd.c  vmod_statsd.vcc
